--- a/app/src/main/res/layout/fragment_map_fregment.xml
+++ b/app/src/main/res/layout/fragment_map_fregment.xml
@@ -38,7 +38,7 @@
                   android:layout_height="wrap_content">
 
                  <ImageView
-                     android:src="@drawable/profile"
+                     android:src="@drawable/logo_lok"
                      android:layout_width="match_parent"
                      android:layout_height="65dp" />
 
@@ -98,7 +98,7 @@
                   android:layout_height="wrap_content">
 
                   <ImageView
-                      android:src="@drawable/profile"
+                      android:src="@drawable/logo_lok"
                       android:layout_width="match_parent"
                       android:layout_height="65dp" />
 
