--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,87 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/login_bg"
     tools:context=".LoginActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/screen" />
+    <!--<ImageView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:scaleType="fitXY"-->
+        <!--android:src="@drawable/login_bg" />-->
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:weightSum="1">
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:scrollbars="none">-->
+
+
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.15"
-            android:gravity="center"
+            android:weightSum="1"
             android:orientation="vertical">
 
-            <!--<TextView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="30dp"-->
-                <!--android:gravity="center"-->
-                <!--android:text="@string/title_activity_navigation"-->
-                <!--android:textColor="#000"-->
-                <!--android:textSize="25dp"-->
-                <!--android:textStyle="bold"-->
-                <!--android:typeface="monospace" />-->
 
-            <TextView
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="SIGN IN"
-                android:textColor="#000"
-                android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.2"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:orientation="vertical">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:layout_marginTop="190dp"
+                android:layout_marginTop="200dp"
                 android:orientation="vertical">
 
+                <LinearLayout
+                    android:weightSum="1"
+                    android:gravity="center"
+                    android:background="@drawable/et_bg"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="10dp"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/mb"
+                        />
+
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="22dp"
+                        android:background="#0FA315"
+                        android:layout_marginLeft="5dp"
+                        >
+                    </View>
 
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.15"
-                        android:drawableLeft="@drawable/mb"
-                        android:layout_marginBottom="10dp"
-                        android:drawablePadding="15dp"
-                        android:background="@drawable/bt_background"
+                        android:layout_marginLeft="5dp"
                         android:gravity="start|center"
                         android:hint="Enter Mobile No."
                         android:inputType="number"
                         android:textColor="#000"
                         android:textColorHint="#000"
-                        android:textSize="13dp" />
+                        android:textSize="15dp"
+                        android:background="@null"
+                        />
 
+                </LinearLayout>
                 <LinearLayout
                     android:weightSum="1"
                     android:gravity="center"
                     android:layout_marginBottom="10dp"
-                    android:background="@drawable/bt_background"
+                    android:background="@drawable/et_bg"
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/pss"
+                        />
+
+                    <View
+                        android:layout_width="2dp"
+                        android:layout_height="22dp"
+                        android:background="#0FA315"
+                        android:layout_marginLeft="5dp"
+                        >
+                    </View>
 
                     <EditText
                         android:layout_weight="1"
@@ -89,51 +112,42 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="start|center"
-                        android:drawablePadding="15dp"
-                        android:drawableLeft="@drawable/pss"
+                        android:layout_marginLeft="5dp"
                         android:hint="Enter Password"
                         android:inputType="textPassword"
                         android:textColor="#000"
                         android:textColorHint="#000"
-                        android:textSize="13dp" />
+                        android:textSize="15dp"
+                        />
 
                 </LinearLayout>
 
                 <TextView
                     android:text="Forgot Password?"
                     android:textColor="#fff"
-                    android:gravity="end"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginBottom="30dp"
+                    android:gravity="center"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="5dp"
+                    android:textSize="18dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
 
-            <TextView
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="40dp"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:textColor="#fff"
-                android:typeface="sans"
-                android:textStyle="bold"
-                android:text="Sign In"
-                android:textSize="20dp" />
 
-            <TextView
+            <Button
                 android:id="@+id/btn_login"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Sign In"
-                android:textSize="23dp"
-                android:textStyle="bold"
-                android:typeface="serif"
+                android:fontFamily="@font/myfont"
+                android:background="@drawable/signin_bg"
                 android:textAllCaps="false"
-                android:textColor="#fff" />
+                android:textColor="#fff"
+                android:textSize="22dp"
+
+                 />
 
 
         </LinearLayout>
@@ -144,9 +158,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
-            android:layout_weight="0.85"
-            android:layout_gravity="center"
-            android:gravity="center"
+            android:layout_weight="0.8"
             android:orientation="vertical">
 
             <TextView
@@ -154,11 +166,11 @@
                 android:layout_height="wrap_content"
                 android:text="Don't have an account?"
                 android:textSize="16dp"
-                android:gravity="center"
-                android:textStyle="normal"
-                android:typeface="sans"
+                android:textAlignment="center"
+                android:typeface="serif"
                 android:textAllCaps="false"
-                android:textColor="#3B6F99" />
+                android:layout_marginBottom="10dp"
+                android:textColor="#fff" />
 
             <TextView
                 android:id="@+id/btn_signup"
@@ -166,14 +178,17 @@
                 android:layout_height="wrap_content"
                 android:text="Sign Up"
                 android:textSize="22dp"
-                android:gravity="center"
-                android:textStyle="bold"
+                android:textAlignment="center"
+                android:fontFamily="@font/myfont"
                 android:typeface="serif"
                 android:textAllCaps="false"
-                android:textColor="#3B6F99" />
+                android:textColor="#2BA311" />
         </LinearLayout>
 
 
     </LinearLayout>
 
-</RelativeLayout>
+
+    <!--</ScrollView>-->
+
+</LinearLayout>
