--- a/app/src/main/res/layout/activity_user_prof.xml
+++ b/app/src/main/res/layout/activity_user_prof.xml
@@ -137,7 +137,7 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/ic_mail"/>
+                android:src="@drawable/email"/>
             <TextView
                 android:textStyle="bold"
                 android:layout_gravity="center_vertical"
@@ -155,7 +155,7 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/phone"/>
+                android:src="@drawable/mb"/>
             <TextView
                 android:textStyle="bold"
 
@@ -174,7 +174,7 @@
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:src="@drawable/adgrp"/>
+                android:src="@drawable/nameicon"/>
             <TextView
                 android:textStyle="bold"
                 android:layout_gravity="center_vertical"
