--- a/app/src/main/res/layout/contact_us_fragment.xml
+++ b/app/src/main/res/layout/contact_us_fragment.xml
@@ -42,7 +42,7 @@
                             android:layout_height="28dp"
                             android:layout_gravity="center"
                             android:layout_weight="0.85"
-                            android:src="@drawable/name" />
+                            android:src="@drawable/name_icon" />
 
                         <EditText
                             android:layout_width="match_parent"
@@ -75,7 +75,7 @@
                             android:layout_height="28dp"
                             android:layout_gravity="center"
                             android:layout_weight="0.85"
-                            android:src="@drawable/mobile" />
+                            android:src="@drawable/mb" />
 
                         <EditText
                             android:layout_width="match_parent"
@@ -106,7 +106,7 @@
                             android:layout_height="28dp"
                             android:layout_gravity="top"
                             android:layout_weight="0.85"
-                            android:src="@drawable/actiab" />
+                            android:src="@drawable/about_icon" />
 
                         <EditText
                             android:id="@+id/text_dialog"
@@ -136,7 +136,7 @@
                             android:layout_height="40dp"
                             android:layout_below="@+id/text_dialog"
                             android:layout_centerHorizontal="true"
-                            android:background="@drawable/bgcolor"
+                            android:background="@drawable/btn_bg_new"
                             android:gravity="center_vertical|center_horizontal"
                             android:text="Send"
                             android:textAllCaps="false"
