--- a/app/src/main/res/layout/fragment_favorite_list.xml
+++ b/app/src/main/res/layout/fragment_favorite_list.xml
@@ -121,7 +121,7 @@
                                 android:textColor="#fff"
                                 android:layout_gravity="center"
                                 android:layout_marginRight="5dp"
-                                android:background="@drawable/bgcolor"
+                                android:background="@drawable/btn_bg_new"
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp" />
 
@@ -131,7 +131,7 @@
                                 android:layout_weight="0.50"
                                 android:textColor="#fff"
                                 android:layout_gravity="center"
-                                android:background="@drawable/bgcolor"
+                                android:background="@drawable/btn_bg_new"
                                 android:layout_width="match_parent"
                                 android:layout_height="40dp" />
 
