--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -23,29 +23,61 @@
                android:layout_width="match_parent"
                android:layout_height="match_parent">
 
-       <LinearLayout
-           android:layout_weight="0.45"
+       <!--<LinearLayout-->
+           <!--android:layout_weight="0.45"-->
 
-           android:gravity="center"
-           android:layout_marginTop="2dp"
-           android:orientation="vertical"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content">
+           <!--android:gravity="center"-->
+           <!--android:layout_marginTop="2dp"-->
+           <!--android:orientation="vertical"-->
+           <!--android:layout_width="match_parent"-->
+           <!--android:layout_height="wrap_content">-->
 
-           <android.support.v7.widget.CardView
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_margin="10dp">
-           <android.support.v7.widget.SearchView
-               android:layout_marginRight="8dp"
-               android:layout_marginLeft="8dp"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content">
+           <!--<android.support.v7.widget.CardView-->
+               <!--android:layout_width="match_parent"-->
+               <!--android:layout_height="wrap_content"-->
+               <!--android:layout_margin="10dp">-->
+           <!--<android.support.v7.widget.SearchView-->
+               <!--android:layout_marginRight="8dp"-->
+               <!--android:layout_marginLeft="8dp"-->
+               <!--app:searchIcon="@drawable/search_icon"-->
+               <!--android:layout_width="match_parent"-->
+               <!--android:layout_height="40dp">-->
 
-           </android.support.v7.widget.SearchView>
-               </android.support.v7.widget.CardView>
+           <!--</android.support.v7.widget.SearchView>-->
+               <!--</android.support.v7.widget.CardView>-->
 
-       </LinearLayout>
+       <!--</LinearLayout>-->
+
+
+               <LinearLayout
+                   android:weightSum="1"
+                   android:gravity="center"
+                   android:orientation="horizontal"
+                   android:layout_width="match_parent"
+                   android:layout_margin="10dp"
+                   android:layout_height="wrap_content">
+
+                   <ImageView
+                       android:layout_width="24dp"
+                       android:layout_height="24dp"
+                       android:src="@drawable/search_icon"
+                       />
+
+
+                   <EditText
+                       android:layout_width="match_parent"
+                       android:layout_height="40dp"
+                       android:layout_marginLeft="5dp"
+                       android:gravity="start|center"
+                       android:hint="Search"
+                       android:inputType="number"
+                       android:textColor="#000"
+                       android:textColorHint="#000"
+                       android:textSize="15dp"
+                       android:background="@null"
+                       />
+
+               </LinearLayout>
 
 
        <LinearLayout
@@ -160,7 +192,7 @@
                            android:textColor="#fff"
                            android:layout_gravity="center"
                            android:layout_marginRight="5dp"
-                           android:background="@drawable/bgcolor"
+                           android:background="@drawable/btn_bg_new"
                            android:layout_width="match_parent"
                            android:layout_height="40dp" />
 
@@ -171,7 +203,7 @@
                            android:layout_weight="0.50"
                            android:textColor="#fff"
                            android:layout_gravity="center"
-                           android:background="@drawable/bgcolor"
+                           android:background="@drawable/btn_bg_new"
                            android:layout_width="match_parent"
                            android:layout_height="40dp" />
 
@@ -292,7 +324,7 @@
                                        android:textColor="#fff"
                                        android:layout_gravity="center"
                                        android:layout_marginRight="5dp"
-                                       android:background="@drawable/bgcolor"
+                                       android:background="@drawable/btn_bg_new"
                                        android:layout_width="match_parent"
                                        android:layout_height="40dp" />
 
@@ -302,7 +334,7 @@
                                        android:layout_weight="0.50"
                                        android:textColor="#fff"
                                        android:layout_gravity="center"
-                                       android:background="@drawable/bgcolor"
+                                       android:background="@drawable/btn_bg_new"
                                        android:layout_width="match_parent"
                                        android:layout_height="40dp" />
 
