--- a/app/src/main/res/layout/host_event_screen_fragment.xml
+++ b/app/src/main/res/layout/host_event_screen_fragment.xml
@@ -20,16 +20,6 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <Button
-                    android:layout_margin="5dp"
-                    android:text="Edit"
-                    android:textColor="#fff"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/bgcolor"
-                    android:layout_gravity="end"
-                    android:textAllCaps="false"
-                    android:layout_width="100dp"
-                    android:layout_height="40dp" />
 
                 <android.support.v7.widget.CardView
                     android:layout_width="match_parent"
@@ -41,6 +31,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
                         android:orientation="vertical"
+                        android:background="@color/colorPrimary"
                         android:weightSum="1">
 
                         <ImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -53,6 +44,18 @@
                     </LinearLayout>
 
                 </android.support.v7.widget.CardView>
+
+
+                <Button
+                    android:layout_margin="5dp"
+                    android:text="Edit"
+                    android:textColor="#fff"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/btn_bg_new"
+                    android:layout_gravity="end"
+                    android:textAllCaps="false"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -331,7 +334,7 @@
                                         android:layout_height="40dp"
                                         android:layout_marginRight="5dp"
                                         android:layout_weight="1"
-                                        android:background="@drawable/bgcolor"
+                                        android:background="@drawable/btn_bg_new"
                                         android:text="Reject"
                                         android:textAlignment="center"
                                         android:textAllCaps="false"
@@ -341,7 +344,7 @@
                                         android:layout_width="match_parent"
                                         android:layout_height="40dp"
                                         android:layout_weight="1"
-                                        android:background="@drawable/bgcolor"
+                                        android:background="@drawable/btn_bg_new"
                                         android:text="Hold"
                                         android:textAllCaps="false"
                                         android:textColor="#fff" />
