--- a/app/src/main/res/layout/rating_fragment.xml
+++ b/app/src/main/res/layout/rating_fragment.xml
@@ -31,6 +31,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:orientation="vertical"
+                    android:background="@color/colorPrimary"
                     android:weightSum="1">
 
 
@@ -50,7 +51,7 @@
                         android:layout_marginTop="10dp"
                         android:gravity="center"
                         android:text="Ms Alina"
-                        android:textColor="#000"
+                        android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -97,7 +98,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"
-                    android:background="@drawable/bgcolor"
+                    android:background="@drawable/btn_bg_new"
                     android:gravity="center_vertical|center_horizontal"
                     android:text="Send"
                     android:textAllCaps="false"
