--- a/app/src/main/res/layout/selection_screen.xml
+++ b/app/src/main/res/layout/selection_screen.xml
@@ -128,7 +128,7 @@
                                         android:layout_marginRight="5dp"
                                         android:layout_weight="0.50"
                                         android:layout_gravity="center"
-                                        android:background="@drawable/bgcolor"
+                                        android:background="@drawable/btn_bg_new"
                                         android:text="View"
                                         android:textAllCaps="false"
                                         android:textColor="#fff" />
@@ -138,7 +138,7 @@
                                         android:layout_height="40dp"
                                         android:layout_weight="0.50"
                                         android:layout_gravity="center"
-                                        android:background="@drawable/bgcolor"
+                                        android:background="@drawable/btn_bg_new"
                                         android:text="Select"
                                         android:textAllCaps="false"
                                         android:textColor="#fff" />
@@ -259,7 +259,7 @@
                                         android:layout_marginRight="5dp"
                                         android:layout_gravity="center"
                                         android:layout_weight="0.50"
-                                        android:background="@drawable/bgcolor"
+                                        android:background="@drawable/btn_bg_new"
                                         android:text="View"
                                         android:textAllCaps="false"
                                         android:textColor="#fff" />
@@ -269,7 +269,7 @@
                                         android:layout_height="40dp"
                                         android:layout_weight="0.50"
                                         android:layout_gravity="center"
-                                        android:background="@drawable/bgcolor"
+                                        android:background="@drawable/btn_bg_new"
                                         android:text="Select"
                                         android:textAllCaps="false"
                                         android:textColor="#fff" />
