--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#002366</color>
-    <color name="colorPri">#3B6F99</color>
+    <!--<color name="colorPrimary">#002366</color>-->
+    <color name="colorPrimary">#0B0B79</color>
+    <color name="colorPri">#3F51B5</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#000</color>
 
